<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nimeshkadecha.safesync.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nimeshkadecha.safesync.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.nimeshkadecha.safesync.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/LogOut"
        android:name="com.nimeshkadecha.safesync.ui.logout.logout"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/NgoDetail"
        android:name="com.nimeshkadecha.safesync.ui.details.NgoDetail"
        android:label="NgoDetails"
        tools:layout="@layout/fragment_ngo_detail" >
        <action
            android:id="@+id/action_to_BranchDetail"
            app:destination="@id/BranchDetail" />
    </fragment>
    <fragment
        android:id="@+id/BranchDetail"
        android:name="com.nimeshkadecha.safesync.ui.details.BranchDetails"
        android:label="BranchDetails"
        tools:layout="@layout/fragment_branch_details" />

</navigation>